Bug 448337 - "Move step of "Copy then Move" action in single filter rule is not executed (even after fix of bug 376235)" [r+sr=Neil]